apps/burrito/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: burrito-ui
  namespace: burrito-system
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /burrito
        pathType: Prefix
        backend:
          service:
            name: burrito-server
            port:
              name: http
    host: director.prossertech.com
  tls:
  - hosts:
    - director.prossertech.com
    secretName: prossertech-com-tls
